# hakimi-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  EVOLUTION_COMPLETE_REPORT.md  EVOLUTION_ENGINE_LAUNCH.md  EVOLUTION_ROADMAP.md  GAP_ANALYSIS.md  HERMES_ARCHITECTURE.md  HERMES_TELEGRAM_FORMAT.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  LICENSE  MEMORY_ENHANCEMENT_v0.5.56.md  README.md  README_CN.md  RELEASE_NOTES_v0.5.10.md  RELEASE_NOTES_v0.5.56.md  TOOLS_CLI_ARCHITECTURE.md  WEBUI_OPTIMIZATION_v0.5.9.md  install.ps1  install.sh  test_output.txt  udeps.txt  udeps_report.md
crates/hakimi/: Cargo.toml
crates/hakimi-batch/: Cargo.toml
crates/hakimi-batch/src/: lib.rs  progress.rs  progress_notifier.rs  progress_store.rs
crates/hakimi-cli/: Cargo.toml
crates/hakimi-cli/src/: backup.rs  context_manager.rs  doctor.rs  entry.rs  entry.rs.bak  knowledge.rs  lib.rs  main.rs  onboarding.rs  profiles.rs  setup_wizard.rs  skills.rs  skin.rs
crates/hakimi-common/: Cargo.toml
crates/hakimi-common/src/: account_usage.rs  activity.rs  config_ref.rs  error.rs  file_safety.rs  lib.rs  message.rs  model_metadata.rs  prompt_security.rs  redact.rs  response.rs  runtime_home.rs  skin.rs  slash_commands.rs  tool.rs  usage.rs  usage_pricing.rs
crates/hakimi-config/: Cargo.toml
crates/hakimi-config/src/: config.rs  defaults.rs  lib.rs
crates/hakimi-context/: Cargo.toml
crates/hakimi-context/src/: advanced_compressor.rs  archive.rs  compressor.rs  engine.rs  error.rs  factory.rs  intent.rs  lib.rs  memory.rs  memory_cache.rs  prompt_builder.rs  role_adapter.rs  scrubber.rs  simple_engine.rs  smart_engine.rs
crates/hakimi-core/: Cargo.toml
crates/hakimi-core/src/: agent.rs  budget.rs  complexity_analyzer.rs  conversation.rs  credential_pool.rs  delegate.rs  dispatch_learner.rs  dispatched_agent.rs  dispatched_delegate.rs  error_classifier.rs  file_safety.rs  guardrails.rs  lib.rs  loop_impl.rs  metrics.rs  model_dispatch.rs  model_dispatcher.rs  persona.rs  persona_registry.rs  persona_runtime.rs  retry.rs  shared.rs  team.rs  trajectory.rs  turn_retry_state.rs
crates/hakimi-core/tests/: integration.rs  tracing_spans.rs
crates/hakimi-cron/: Cargo.toml
crates/hakimi-cron/src/: lib.rs  persistence.rs  retry.rs  run_store.rs
crates/hakimi-desktop/: .gitignore  Cargo.toml  README.md  build.rs  package.json  tauri.conf.json
crates/hakimi-desktop/capabilities/: default.json
crates/hakimi-desktop/src/: backend.rs  gui.rs  lib.rs  main.rs
crates/hakimi-gateway/: Cargo.toml
crates/hakimi-gateway/src/: bluebubbles.rs  clawbot.rs  dingtalk.rs  discord.rs  email.rs  feishu.rs  homeassistant.rs  lib.rs  lifecycle.rs  matrix.rs  mattermost.rs  msgraph_webhook.rs  qqbot.rs  signal.rs  slack.rs  sms.rs  telegram.rs  webhook.rs  wecom.rs  whatsapp.rs
crates/hakimi-gateway/tests/: qqbot_integration_test.rs
crates/hakimi-hub/: Cargo.toml
crates/hakimi-hub/src/: hub.rs  lib.rs  main.rs  state.rs
crates/hakimi-knowledge/: Cargo.toml
crates/hakimi-knowledge/src/: commands.rs  graph.rs  lib.rs  provider.rs  search.rs  store.rs  tool.rs  vector_store.rs  version.rs  version_store.rs  versioned_store.rs
crates/hakimi-mcp/: Cargo.toml
crates/hakimi-mcp/src/: adapter.rs  catalog.rs  client.rs  http_transport.rs  lib.rs  protocol.rs  redaction.rs  sampling.rs  sse_transport.rs
crates/hakimi-metrics/: Cargo.toml
crates/hakimi-metrics/examples/: tracing_example.rs
crates/hakimi-metrics/src/: error_tracker.rs  lib.rs  memory_store.rs  tracer.rs  tracing.rs
crates/hakimi-plugin/: Cargo.toml  README.md
crates/hakimi-plugin-sdk/: Cargo.toml
crates/hakimi-plugin-sdk-macro/: Cargo.toml
crates/hakimi-plugin-sdk-macro/src/: lib.rs
crates/hakimi-plugin-sdk/src/: lib.rs
crates/hakimi-plugin/examples/: plugin_manager.rs
crates/hakimi-plugin/src/: config.rs  http_tool.rs  lib.rs  loader.rs  manager.rs  marketplace.rs  models.rs  plugin.rs  registry.rs  wasm_loader.rs
crates/hakimi-server/: Cargo.toml
crates/hakimi-server/src/: api.rs  api_patch.rs  core_agent_host.rs  hub_worker.rs  lib.rs  main.rs  server.rs  studio.rs
crates/hakimi-session/: Cargo.toml
crates/hakimi-session/src/: db.rs  decision_tree.rs  error.rs  lib.rs  message_ops.rs  schema.rs  session_ops.rs
crates/hakimi-session/tests/: stress_test.rs  test_lineage.rs
crates/hakimi-skills/: Cargo.toml
crates/hakimi-skills/src/: builtin_hakimi_guide.md  extractor.rs  hub.rs  lib.rs  lifecycle.rs  loader.rs  preprocessing.rs  safety.rs  skill.rs  slash.rs  store.rs  sync.rs  usage.rs
crates/hakimi-studio-api/: Cargo.toml
crates/hakimi-studio-api/src/: agent_host.rs  event_bus.rs  lib.rs  protocol.rs  runtime.rs
crates/hakimi-tools/: Cargo.toml
crates/hakimi-tools/src/: builtin_browser.rs  builtin_checkpoint.rs  builtin_clarify.rs  builtin_code_exec.rs  builtin_computer_use.rs  builtin_cronjob.rs  builtin_delegate_task.rs  builtin_homeassistant.rs  builtin_image_describe.rs  builtin_image_generate.rs  builtin_kanban.rs  builtin_memory.rs  builtin_mixture_of_agents.rs  builtin_patch.rs  builtin_process.rs  builtin_read_file.rs  builtin_search_files.rs  builtin_send_message.rs  builtin_session_search.rs  builtin_session_search_old.rs  builtin_skill_manage.rs  builtin_team.rs  builtin_terminal.rs  builtin_todo.rs  builtin_todo_old.rs  builtin_transcribe_audio.rs  builtin_tts.rs  builtin_video_analyze.rs  builtin_vision_analyze.rs  builtin_voice_capture.rs  builtin_web_extract.rs  builtin_web_search.rs  builtin_write_file.rs  cache.rs  cache_key.rs  (+12 more)
crates/hakimi-transports/: Cargo.toml
crates/hakimi-tui/: Cargo.toml
crates/hakimi-workspace/: Cargo.toml
examples/hello-wasm-plugin/: Cargo.toml  README.md
examples/json-formatter-plugin/: Cargo.toml  README.md
qq-bot-sdk/: .env.example  CHANGELOG.md  COMPLETION_REPORT.md  Cargo.toml  DESIGN.md  QUICKREF.md  README.md  USAGE.md
qq-bot-sdk/examples/: advanced_bot.rs  simple_bot.rs  test_compile.rs
qq-bot-sdk/src/: auth.rs  client.rs  error.rs  gateway.rs  lib.rs  media.rs  message.rs  model.rs  throttle.rs
qq-bot-sdk/tests/: integration_test.rs
(+197 files in other folders)
