[workspace]
resolver = "2"
members = [
    "crates/hakimi-core",
    "crates/hakimi-transports",
    "crates/hakimi-tools",
    "crates/hakimi-session",
    "crates/hakimi-config",
    "crates/hakimi-context",
    "crates/hakimi-cron",
    "crates/hakimi-gateway",
    "crates/hakimi-cli",
    "crates/hakimi",
    "crates/hakimi-knowledge",
    "crates/hakimi-server",
    "crates/hakimi-common",
    "crates/hakimi-mcp",
    "crates/hakimi-plugin",
    "crates/hakimi-tui",
    "crates/hakimi-skills",
]

[workspace.package]
version = "0.3.134"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking", "multipart"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.35", features = ["bundled", "backup"] }

# Config / paths
dirs = "6"

# UUID / time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# HTML parsing
scraper = "0.22"

# Random
rand = "0.9"

# Async traits
async-trait = "0.1"

# Stream utilities
futures = "0.3"
bytes = "1"

# Pin/project
pin-project = "1"

# Regex for streaming
fancy-regex = "0.14"

# Base64
base64 = "0.22"

# Interactive prompts
dialoguer = "0.11"
