[package]
name = "hakimi-batch"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
hakimi-core = { path = "../hakimi-core" }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
