[package]
name = "hakimi-cli"
version.workspace = true
edition.workspace = true

[features]
browser = ["hakimi-tools/browser", "hakimi-server/browser"]

[dependencies]
hakimi-gateway = { path = "../hakimi-gateway" }
hakimi-common = { path = "../hakimi-common" }
hakimi-core = { path = "../hakimi-core" }
hakimi-config = { path = "../hakimi-config" }
hakimi-session = { path = "../hakimi-session" }
hakimi-tools = { path = "../hakimi-tools" }
hakimi-transports = { path = "../hakimi-transports" }
hakimi-context = { path = "../hakimi-context" }
hakimi-knowledge = { path = "../hakimi-knowledge" }
hakimi-mcp = { path = "../hakimi-mcp" }
hakimi-plugin = { path = "../hakimi-plugin" }
hakimi-skills = { path = "../hakimi-skills" }
hakimi-server = { path = "../hakimi-server" }
hakimi-cron = { path = "../hakimi-cron" }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
flate2 = "1"
tar = "0.4"
base64.workspace = true

[dev-dependencies]
chrono = { workspace = true }
