[package]
name = "hakimi-context"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
hakimi-transports = { path = "../hakimi-transports" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
md5 = "0.7"
thiserror = { workspace = true }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
