[package]
name = "hakimi-core"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
hakimi-transports = { path = "../hakimi-transports" }
hakimi-tools = { path = "../hakimi-tools" }
hakimi-session = { path = "../hakimi-session" }
hakimi-config = { path = "../hakimi-config" }
hakimi-context = { path = "../hakimi-context" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
