[package]
name = "hakimi-core"
version.workspace = true
edition = "2024"

[dependencies]
hakimi-common = { path = "../hakimi-common" }
hakimi-transports = { path = "../hakimi-transports" }
hakimi-tools = { path = "../hakimi-tools" }
hakimi-session = { path = "../hakimi-session" }
hakimi-config = { path = "../hakimi-config" }
hakimi-context = { path = "../hakimi-context" }
hakimi-skills = { path = "../hakimi-skills" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
