[package]
name = "hakimi-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
