[package]
name = "hakimi-knowledge"
version.workspace = true
edition.workspace = true
description = "Knowledge graph memory for Hakimi Agent"

[dependencies]
hakimi-common = { path = "../hakimi-common" }
hakimi-context = { path = "../hakimi-context" }
hakimi-tools = { path = "../hakimi-tools" }
hakimi-transports = { path = "../hakimi-transports" }
petgraph = { version = "0.6", features = ["serde-1", "stable_graph"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
