[package]
name = "hakimi-metrics"
version = "0.5.57"
edition = "2021"
authors = ["Mouseww <mousewu@nousresearch.com>"]
license = "Apache-2.0"
description = "Internal metrics collection for Hakimi Agent"

[dependencies]
parking_lot = "0.12"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
