[package]
name = "hakimi-plugin-sdk-macro"
version = "0.1.0"
edition = "2021"
authors = ["Hakimi Team"]
description = "Procedural macros for hakimi-plugin-sdk"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
