[package]
name = "hakimi-plugin-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Hakimi Team"]
description = "SDK for developing Hakimi WASM plugins"
license = "MIT"
repository = "https://github.com/Mouseww/hakimi-agent"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hakimi-plugin-sdk-macro = { path = "../hakimi-plugin-sdk-macro" }

[dev-dependencies]
