[package]
name = "hakimi-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
hakimi-tools = { path = "../hakimi-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
