[package]
name = "hakimi-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Hakimi Team"]
description = "Plugin system for Hakimi Agent"
license = "MIT"

[dependencies]
hakimi-common = { path = "../hakimi-common" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
