[package]
name = "hakimi-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Hakimi Team"]
description = "Plugin system for Hakimi Agent"
license = "MIT"

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi"]

[dependencies]
hakimi-common = { path = "../hakimi-common" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
dirs = "5.0"
libloading = "0.8"
notify = "6.0"
sha2 = "0.10"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

# WASM runtime (optional feature)
wasmtime = { version = "16.0", optional = true }
wasmtime-wasi = { version = "16.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
tracing-subscriber = "0.3"
