[package]
name = "hakimi-server"
version.workspace = true
edition = "2024"

[lib]
name = "hakimi_server"
path = "src/lib.rs"

[[bin]]
name = "hakimi-server"
path = "src/main.rs"

[features]
browser = ["hakimi-tools/browser"]

[dependencies]
hakimi-core = { path = "../hakimi-core" }
hakimi-config = { path = "../hakimi-config" }
hakimi-session = { path = "../hakimi-session" }
hakimi-skills = { path = "../hakimi-skills" }
hakimi-tools = { path = "../hakimi-tools" }
hakimi-common = { path = "../hakimi-common" }
hakimi-context = { path = "../hakimi-context" }
hakimi-transports = { path = "../hakimi-transports" }
hakimi-knowledge = { path = "../hakimi-knowledge" }
hakimi-cron = { path = "../hakimi-cron" }
hakimi-gateway = { path = "../hakimi-gateway" }
hakimi-metrics = { path = "../hakimi-metrics" }
axum = { version = "0.8", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
clap = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
