[package]
name = "hakimi-session"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
