[package]
name = "hakimi-session"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
hakimi-metrics = { path = "../hakimi-metrics" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"

[lints]
workspace = true
