[package]
name = "hakimi-studio-api"
version.workspace = true
edition = "2024"
description = "Hakimi Studio protocol types, event bus, and local runtime skeleton"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hakimi-workspace = { path = "../hakimi-workspace" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[lints]
workspace = true
