[package]
name = "hakimi-tools"
version.workspace = true
edition.workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
uuid = { workspace = true }
hakimi-session = { path = "../hakimi-session" }
chrono = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
scraper = { workspace = true }

[dev-dependencies]
tempfile = "3"
