[package]
name = "hakimi-transports"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
hakimi-common = { path = "../hakimi-common" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
hakimi-config = { path = "../hakimi-config" }
serde_yaml = { workspace = true }
