[package]
name = "hakimi-agent"
version.workspace = true
edition = "2024"
description = "A high-performance AI agent framework written in Rust"

[[bin]]
name = "hakimi"
path = "src/main.rs"

[features]
browser = ["hakimi-cli/browser"]

[dependencies]
hakimi-cli = { path = "../hakimi-cli" }
anyhow = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
